# hmohdarafat.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  _config.yml  project_tree.txt
assets/: main.css  tailwind.css
docs/: 404.html  index.html
docs/assets/: hmohdarafat_github_io-dxh6b2747d323ae3c7e.js  hmohdarafat_github_io-dxh6c17947bf0709fc6.js  hmohdarafat_github_io-dxh77ec23cfa8eb164f.js  hmohdarafat_github_io-dxha8724a5bc9e58ea7.js  hmohdarafat_github_io-dxhb395d9e35f38295.js  hmohdarafat_github_io-dxhcb95dcff3b4bf9.js  hmohdarafat_github_io-dxhfb66f98d94d8f217.js  hmohdarafat_github_io_bg-dxh28222ad5a86d5ad0.wasm  hmohdarafat_github_io_bg-dxh2b952547c26d5cd9.wasm  hmohdarafat_github_io_bg-dxh5e945e42f9c71986.wasm  hmohdarafat_github_io_bg-dxh7e81ff557f68858.wasm  hmohdarafat_github_io_bg-dxha9e359d88247eb47.wasm  hmohdarafat_github_io_bg-dxhb68e5d4e3cdbffa.wasm  hmohdarafat_github_io_bg-dxhbb9781a5aa9aabc.wasm  main-dxh14f89ce9108020cb.css  main-dxh28619460424729a.css  main-dxh4f46c3993f8f2585.css  main-dxhb9a92408d9ae785.css  main-dxhbc75c5b5fd43cfb6.css  main-dxhc1da8fbc3f6b8617.css  main-dxhc41246e765881b68.css  main-dxhe42d4962dce2a4b.css
docs/wasm/: github_website.js
scripts/: build-pages.ps1  build-pages.sh
src/: app.rs  main.rs
src/blog/: data.rs  mod.rs
src/components/: footer.rs  mod.rs  nav.rs
src/content/: mod.rs  portfolio_content.rs  resume_content.rs
src/pages/: blog.rs  home.rs  layout.rs  mod.rs  not_found.rs  portfolio.rs  resume.rs
src/portfolio/: data.rs  mod.rs
src/resume/: data.rs  mod.rs
src/sections/: contact.rs  mod.rs  (+1 more)
(+11 files in other folders)
